Test changes, add appveyor.yml and settings for 2nd DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,13 @@ services:
       - MYSQL_PASSWORD=pass
     ports:
       - '3306:3306'
+
+  postgres:
+    image: postgres:12-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_RANDOM_ROOT_PASSWORD=yes
+      - POSTGRES_DB=app
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=pass
